tests/fixtures/invalid/indentation_error.sr
rule "EQ: Indent Error" in underlying:
    when true:
        then emit_signal(kind="BUY")
   else:
        then emit_signal(kind="SELL")
